--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -18,5 +18,6 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.2'
     compile 'net.sf.jtidy:jtidy:r938'
     compile 'commons-io:commons-io:2.4'
+    compile 'commons-codec:commons-codec:1.10'
     compile 'com.google.inject:guice:4.0'
 }
