--- a/FrontEnd/build.gradle
+++ b/FrontEnd/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile project(':Core')
-    compile 'org.controlsfx:controlsfx:8.40.10-SNAPSHOT'
+    compile 'org.controlsfx:controlsfx:8.40.10'
 }
