--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,20 @@ plugins {
     id "org.sonarqube" version "2.2"
 }
 
-apply plugin: 'java'
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'jacoco'
+
+    jacoco {
+        toolVersion = '0.7.8'
+    }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+        }
+    }
+}
 
 version = '0.0.1'
 
@@ -20,4 +33,10 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.+'
     compile 'ch.qos.logback:logback-classic:1.+'
     compile 'com.google.inject:guice:4.0'
+}
+
+sonarqube {
+    properties {
+        property 'sonar.jacoco.reportPaths', 'Core/build/jacoco/test.exec'
+    }
 }
