--- a/FrontEnd/build.gradle
+++ b/FrontEnd/build.gradle
@@ -19,6 +19,7 @@ javafx {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.6.4'
 
     compile project(':Core')
     compile 'org.controlsfx:controlsfx:8.40.12'
