--- a/CommandLine/build.gradle
+++ b/CommandLine/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     compile project(':Core')
     compile 'commons-cli:commons-cli:1.3.1'
     compile 'commons-io:commons-io:2.5'
+    compile 'org.reflections:reflections:0.9.10'
+    compile 'com.google.inject.extensions:guice-multibindings:4.1.0'
 }
