--- a/CommandLine/build.gradle
+++ b/CommandLine/build.gradle
@@ -13,8 +13,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile project(':Core')
-    compile 'commons-cli:commons-cli:1.3.1'
     compile 'commons-io:commons-io:2.5'
     compile 'org.reflections:reflections:0.9.10'
     compile 'com.google.inject.extensions:guice-multibindings:4.1.0'
+    compile 'com.google.inject.extensions:guice-assistedinject:4.1.0'
+    compile "com.beust:jcommander:1.48"
 }
