--- a/CommandLine/build.gradle
+++ b/CommandLine/build.gradle
@@ -9,10 +9,18 @@ repositories {
     }
 }
 
+processResources {
+    filesMatching('version.properties') {
+        expand projectVersion: project.version
+    }
+}
+
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.6.4'
 
     compile project(':Core')
-    compile 'commons-cli:commons-cli:1.3.1'
     compile 'commons-io:commons-io:2.5'
+    compile 'com.google.inject.extensions:guice-assistedinject:4.1.0'
+    compile "com.beust:jcommander:1.48"
 }
