--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -13,7 +13,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.6.4'
 
-    compile 'nl.siegmann.epublib:epublib-core:3.1'
+    compile('nl.siegmann.epublib:epublib-core:3.1') {
+        exclude group: 'org.slf4j'
+    }
     compile 'org.pegdown:pegdown:1.6.0'
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'net.sf.jtidy:jtidy:r938'
