--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ allprojects {
             xml.enabled true
         }
     }
+
+    dependencies {
+        compile 'org.slf4j:slf4j-api:1.7.22'
+        compile 'ch.qos.logback:logback-core:1.1.9'
+        compile 'ch.qos.logback:logback-classic:1.1.9'
+    }
 }
 
 version = '0.0.1'
@@ -30,8 +36,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.6.4'
 
-    compile 'org.slf4j:slf4j-api:1.7.+'
-    compile 'ch.qos.logback:logback-classic:1.+'
     compile 'com.google.inject:guice:4.1.0'
 }
 
