Run verification checks on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
     packages:
       - oracle-java8-installer
 script:
+  - ./gradlew check
   - ./gradlew sonarqube
 cache:
   directories:
