--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
 script:
   - ./gradlew check
   - ./gradlew sonarqube
+  - ./gradlew cucumber
 cache:
   directories:
     - '$HOME/.m2/repository'
