Add checkstyle configuration to repository

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 allprojects {
     apply plugin: 'java'
     apply plugin: 'jacoco'
+    apply plugin: 'checkstyle'
 
     jacoco {
         toolVersion = '0.7.8'
@@ -14,6 +15,10 @@ allprojects {
         reports {
             xml.enabled true
         }
+    }
+
+    checkstyle {
+        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
     }
 
     dependencies {
