--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     }
 
     checkstyle {
+        toolVersion = "7.5.1"
         configFile = rootProject.file('config/checkstyle/checkstyle.xml')
     }
 
