--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     checkstyle {
         toolVersion = "7.5.1"
         configFile = rootProject.file('config/checkstyle/checkstyle.xml')
+        ignoreFailures = true
     }
 
     dependencies {
