--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
       - oracle-java8-installer
 script:
   - ./gradlew check
-  - ./gradlew sonarqube
+#  - ./gradlew sonarqube
   - ./gradlew cucumber
 cache:
   directories:
