--- a/FrontEnd/build.gradle
+++ b/FrontEnd/build.gradle
@@ -1,7 +1,17 @@
-apply plugin: 'java'
-apply from: 'javafx.plugin'
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
 
-version = '0.0.1'
+apply plugin: 'java'
+apply plugin: 'javafx-gradle-plugin'
+
+version = '0.1.0'
 
 repositories {
     mavenCentral()
@@ -13,8 +23,10 @@ repositories {
     }
 }
 
-javafx {
+jfx {
     mainClass = 'nl.mikero.spiner.frontend.SpinerApplication'
+    vendor = 'Mike Rombout'
+    appName = 'Spiner'
 }
 
 dependencies {
