--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -12,9 +12,13 @@ repositories {
     }
 }
 
+jar {
+    archiveName 'spiner-core-' + version + '.jar'
+}
+
 dependencies {
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.8.47'
+    testCompile 'org.mockito:mockito-core:2.10.0'
 
     cucumberCompile 'info.cukes:cucumber-java:1.2.5'
     cucumberCompile 'info.cukes:cucumber-guice:1.2.5'
