--- a/API/build.gradle
+++ b/API/build.gradle
@@ -14,5 +14,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "com.sparkjava:spark-core:2.8.0"
+    compile 'io.javalin:javalin:2.3.0'
+    compile 'ro.pippo:pippo-core:1.11.0'
     compile project(':Core')
 }
