Update SonarQube to SonarCloud

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ systemProp.sonar.links.ci=https://travis-ci.org/mrombout/Spiner
 systemProp.sonar.links.scm=https://github.com/mrombout/Spiner
 systemProp.sonar.links.issue=https://github.com/mrombout/Spiner/issues
 
-systemProp.sonar.host.url=https://sonarqube.com
+systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.organization=mrombout-github
 systemProp.sonar.login=4ebe347692756b47a96e18b269a3683a18127481
