--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,21 @@ plugins {
 
 allprojects {
     apply plugin: 'java'
-    apply plugin: 'jacoco'
+//    apply plugin: 'jacoco'
     apply plugin: 'checkstyle'
 
-    jacoco {
-        toolVersion = '0.7.8'
-    }
+//    sourceCompatibility = JavaVersion.VERSION_1_8
+//    targetCompatibility = JavaVersion.VERSION_1_8
 
-    jacocoTestReport {
-        reports {
-            xml.enabled true
-        }
-    }
+//    jacoco {
+//        toolVersion = '0.7.8'
+//    }
+
+//    jacocoTestReport {
+//        reports {
+//            xml.enabled true
+//        }
+//    }
 
     checkstyle {
         toolVersion = "6.16"
@@ -37,17 +40,18 @@ repositories {
     maven {
         url "https://github.com/psiegman/mvn-repo/raw/master/releases"
     }
+    jcenter()
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.10.0'
+    testCompile 'org.mockito:mockito-core:3.2.4'
 
     compile 'com.google.inject:guice:4.1.0'
 }
 
-sonarqube {
-    properties {
-        property 'sonar.jacoco.reportPaths', 'Core/build/jacoco/test.exec'
-    }
-}
+//sonarqube {
+//    properties {
+//        property 'sonar.jacoco.reportPaths', 'Core/build/jacoco/test.exec'
+//    }
+//}
