--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id "java"
-//    id "com.github.samueltbrown.cucumber" version "0.9"
 }
 
 version = '0.1.2'
@@ -20,8 +19,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:3.2.4'
 
-//    cucumberCompile 'info.cukes:cucumber-java:1.2.5'
-//    cucumberCompile 'info.cukes:cucumber-guice:1.2.5'
+    testImplementation 'io.cucumber:cucumber-java:4.7.4'
+    testImplementation 'io.cucumber:cucumber-guice:4.7.4'
 
     compile('nl.siegmann.epublib:epublib-core:3.1') {
         exclude group: 'org.slf4j'
