--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,21 @@
 plugins {
-    id "org.sonarqube" version "2.5"
+    id "org.sonarqube" version "2.8"
 }
 
 allprojects {
     apply plugin: 'java'
-//    apply plugin: 'jacoco'
+    apply plugin: 'jacoco'
     apply plugin: 'checkstyle'
 
-//    sourceCompatibility = JavaVersion.VERSION_1_8
-//    targetCompatibility = JavaVersion.VERSION_1_8
+    jacoco {
+        toolVersion = '0.8.5'
+    }
 
-//    jacoco {
-//        toolVersion = '0.7.8'
-//    }
-
-//    jacocoTestReport {
-//        reports {
-//            xml.enabled true
-//        }
-//    }
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+        }
+    }
 
     checkstyle {
         toolVersion = "6.16"
@@ -50,8 +47,8 @@ dependencies {
     compile 'com.google.inject:guice:4.1.0'
 }
 
-//sonarqube {
-//    properties {
-//        property 'sonar.jacoco.reportPaths', 'Core/build/jacoco/test.exec'
-//    }
-//}
+sonarqube {
+    properties {
+        property 'sonar.jacoco.reportPaths', 'Core/build/jacoco/test.exec'
+    }
+}
