--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,3 +15,16 @@ jobs:
         java-version: 11.0.4
     - name: Build with Gradle
       run: ./gradlew build
+
+  sonarqube:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up JDK 11.0.4
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11.0.4
+    - name: Analyze with Sonarqube
+      run: ./gradlew sonarqube
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
