--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,7 @@ allprojects {
 
     dependencies {
         compile 'org.slf4j:slf4j-api:1.7.25'
-        compile 'ch.qos.logback:logback-core:1.2.3'
-        compile 'ch.qos.logback:logback-classic:1.2.3'
+        compile 'org.slf4j:slf4j-jdk14:1.7.25'
     }
 
     test {
