--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -23,7 +23,9 @@ dependencies {
         exclude group: 'org.slf4j'
     }
 
-    compile 'com.vladsch.flexmark:flexmark-all:0.50.46'
+    compile 'com.vladsch.flexmark:flexmark:0.50.46'
+    compile 'com.vladsch.flexmark:flexmark-profile-pegdown:0.50.46'
+
     compile 'org.jsoup:jsoup:1.10.3'
     compile 'net.sf.jtidy:jtidy:r938'
     compile 'commons-io:commons-io:2.5'
