--- a/CommandLine/build.gradle
+++ b/CommandLine/build.gradle
@@ -55,5 +55,5 @@ dependencies {
     compile project(':Core')
     compile 'commons-io:commons-io:2.5'
     compile 'com.google.inject.extensions:guice-assistedinject:4.1.0'
-    compile "com.beust:jcommander:1.72"
+    compile 'commons-cli:commons-cli:1.4'
 }
