--- a/Web/build.gradle
+++ b/Web/build.gradle
@@ -6,8 +6,10 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.sparkjava:spark-core:2.8.0"
 }
